update market